--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -212,3 +212,10 @@
     加えて軍の朝昼夜の気に留意し、犯してはならない戦いの禁忌を示す。
     「有利な地を占める」戦争の中、将が命を受け軍を編成し敵と対峙して宿営するまでで、先に有利な地を占め勝ちを争う≒軍争ほど難しいことはない。
     軍曹の難しさは、(策略によって)敵軍には自軍を遠くにいるように見せかけ油断させて利とするところにある。敵より遅く出て先に到着するのを遠近の計(迂直の計)を知る者である。
+- date: 2024-12-15
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 278 ~ 284
+  notes: |
+    第 10 章 ケーススタディ：書籍の貸し出しシステム。
+    前提条件によって収縮が失敗してしまう。前提条件は本物の bug に対してのみ機能するように調整がいる。
+    PropEr では同じモデルを使って並列テストも実行できる。それがこのステートフルプロパティのサニティチェックになる。
