--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -219,3 +219,11 @@
     第 10 章 ケーススタディ：書籍の貸し出しシステム。
     前提条件によって収縮が失敗してしまう。前提条件は本物の bug に対してのみ機能するように調整がいる。
     PropEr では同じモデルを使って並列テストも実行できる。それがこのステートフルプロパティのサニティチェックになる。
+- date: 2024-12-16
+  bookTitle: 魏武注孫子
+  pages: 119 ~ 125
+  notes: |
+    軍争篇 第七。
+    「百里の行軍」長距離の行軍は軍を疲弊させるため、軍争の際には長距離を移動しないことが重要となる。
+    事例として諸葛亮が孫権に救援を求めた外交を挙げる。
+    「地の利」敵情を知らない者は交戦できず、地形を知らない者は行軍できず、道案内を用いない者は地の利を得られない。
