--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -227,3 +227,13 @@
     「百里の行軍」長距離の行軍は軍を疲弊させるため、軍争の際には長距離を移動しないことが重要となる。
     事例として諸葛亮が孫権に救援を求めた外交を挙げる。
     「地の利」敵情を知らない者は交戦できず、地形を知らない者は行軍できず、道案内を用いない者は地の利を得られない。
+- date: 2024-12-17
+  bookTitle: 魏武注孫子
+  pages: 126  ~ 129
+  notes: |
+    軍争篇 第七。
+    「風林火山」軍を詐術によって変幻自在に変化するさまを風林火山陰雷霆に例える。
+    風林火山陰雷霆なところを風林火山にしたのは語呂のせいかも？とのこと。
+    Web で検索して調べるに火と雷霆が速さを表して重複すると捉える説があるが、侵略の勢いと機敏に進軍することを表すと思うので誤読だろう。
+    「指揮系統」場に応じて鐘・太鼓・旌旗といった命令系統で軍を将の意のままに動かす。
+    魏武注がなくテキストに問題があると言われているようだが、内容は簡潔でわかりやすい。
