--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -237,3 +237,16 @@
     Web で検索して調べるに火と雷霆が速さを表して重複すると捉える説があるが、侵略の勢いと機敏に進軍することを表すと思うので誤読だろう。
     「指揮系統」場に応じて鐘・太鼓・旌旗といった命令系統で軍を将の意のままに動かす。
     魏武注がなくテキストに問題があると言われているようだが、内容は簡潔でわかりやすい。
+- date: 2024-12-18
+  bookTitle: 魏武注孫子
+  pages: 130  ~ 136
+  notes: |
+    軍争篇 第七。
+    「有を与える気」気芯力変の点から攻撃の機会をとく。
+    気は敵の士気が衰えたとき、心は敵の心が乱れたとき、力は敵が遠くから来たりて疲弊しているとき、変は整った大きな敵陣でないとき。
+    士気が朝昼夕で衰えていくのを、北宋の梅堯臣は初め中頃終わりの比喩と解釈する。
+    事例として夷陵の戦い。
+    「軍の禁忌」八つの禁忌、高い丘に向かわない、丘を背に迎撃しない、偽りの敗走を追撃しない、鋭敏な兵を攻撃しない、
+    囮に食いつかない、自国に帰る(帰師の)敵を遮らない、包囲する時は完全に包囲しない(一部を開ける)、窮地の敵に迫らない
+    事例として博望坡の戦い(偽りの敗走)、穣城の戦い、鄴城の戦い(帰師)。
+    帰師の敵を遮らないのは、敵に必死に自国に「勢」があるため。
