--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -250,3 +250,17 @@
     囮に食いつかない、自国に帰る(帰師の)敵を遮らない、包囲する時は完全に包囲しない(一部を開ける)、窮地の敵に迫らない
     事例として博望坡の戦い(偽りの敗走)、穣城の戦い、鄴城の戦い(帰師)。
     帰師の敵を遮らないのは、敵に必死に自国に「勢」があるため。
+- date: 2024-12-19
+  bookTitle: 魏武注孫子
+  pages: 137  ~ 143
+  notes: |
+    九変篇 第八。
+    最初の五つの土地は九変それ自体とあまり関係ないことからテキストに乱れがあるとされる。
+    戦いは原則通りの正と臨機応変な変があり、道・軍・城・地・君命において変を知り、戦いにおいては常に変に警戒しなければならない。
+    孫子は将の選択が勝敗を決めるとし、選ぶべきでない将の特徴、必死な将、生き延びようとする将、短気な将、清廉潔白な将、民草を愛する将の「五危」を挙げる。
+    「五つの土地」圮地(水浸しの地)では宿営しない・衢地(四方に通ずる地)では諸侯に攻められぬよう盟約を結ぶ
+    ・絶地(活路のない地)では留まらない・囲地(山に囲まれた地)では謀略を使う・死地(撤退できない地)では必死に戦う。
+    軍争篇と九地篇とテキストの重複がある。
+    「変の必要性」経由すべきでない道、戦うべきでない軍、攻めるべきでない城、争うべきではない地、従うべきでない君命がある。
+    これらの変を知り、利害を測る必要性をとく。
+    曹操は九変に対して五変なのは合わせる必要がないか、九を究と捉えていた。九つの変化でなく五つの変からの臨機応変な対応が必要であると考えた。
