--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -264,3 +264,15 @@
     「変の必要性」経由すべきでない道、戦うべきでない軍、攻めるべきでない城、争うべきではない地、従うべきでない君命がある。
     これらの変を知り、利害を測る必要性をとく。
     曹操は九変に対して五変なのは合わせる必要がないか、九を究と捉えていた。九つの変化でなく五つの変からの臨機応変な対応が必要であると考えた。
+- date: 2024-12-20
+  bookTitle: 魏武注孫子
+  pages: 143  ~ 148
+  notes: |
+    九変篇 第八。
+    「変に備える」諸侯を屈服させるには害を、煩わせるには事業を、飛びつかせるには利を以てす。
+    敵が来ないこと攻撃してこないことをあてにせず、自軍の備えをあてにする。
+    「将の五危」軍を全滅させ将を殺すのは必ず五危による。
+    必死な将は(柔軟さに欠き)殺しやすい。生き延びようとする将は捕虜にしやすい。
+    将が短期であれば侮って、清廉潔白であれば辱めておびき寄せることできる。
+    将が民草を愛すれば民を痛めつけることで救いのために煩わせることができる。
+    事例として五丈原の戦い。廉潔なるは辱む可し。
