--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -276,3 +276,12 @@
     将が短期であれば侮って、清廉潔白であれば辱めておびき寄せることできる。
     将が民草を愛すれば民を痛めつけることで救いのために煩わせることができる。
     事例として五丈原の戦い。廉潔なるは辱む可し。
+- date: 2024-12-21
+  bookTitle: 魏武注孫子
+  pages: 149  ~ 150
+  notes: |
+    行軍篇 第九。
+    前半は行軍する際には地形に応じた方法を取る。軍に適した、避けるべき、慎重に捜索すべき地形について触れる。
+    後半は敵の行軍に関する情報を収集し、接触した際には「兵は詭道」の考えに基づいた間諜などの駆け引きで、敵の情報収集と分析を行う。
+    最後に将が兵に命令するのには信頼関係で以て行うべきであるととく。
+    状況を見るべきであるとかの話であるけど概説しか読んでないので詳細は各節を読んで判断する必要があるか。
