--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -285,3 +285,13 @@
     後半は敵の行軍に関する情報を収集し、接触した際には「兵は詭道」の考えに基づいた間諜などの駆け引きで、敵の情報収集と分析を行う。
     最後に将が兵に命令するのには信頼関係で以て行うべきであるととく。
     状況を見るべきであるとかの話であるけど概説しか読んでないので詳細は各節を読んで判断する必要があるか。
+- date: 2024-12-22
+  bookTitle: 魏武注孫子
+  pages: 150  ~ 154
+  notes: |
+    行軍篇 第九。
+    「地の利」行軍するには有利な地形を選ぶ。山では南側を移動し自軍が敵より高い場所で戦う。
+    川では敵が川を半分渡り水に浸からせた状態で戦う。南側の高い土地に陣取れば水攻めにあうこともない。
+    湿地ではなるべく戦わず、やむを得ぬ場合は木々を背にして戦う。平地では高い地形を右後ろにし、より低い地形にいる敵と戦う。
+    この 4 つの地の利は、黄帝が四方の諸侯に勝った所以である。
+    より有利な高い日向の地形に陣取るには、先に出た軍争が必要ということか。
