--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -211,7 +211,7 @@
     風林火山陰雷霆を実現するには兵を統率し一つにする。
     加えて軍の朝昼夜の気に留意し、犯してはならない戦いの禁忌を示す。
     「有利な地を占める」戦争の中、将が命を受け軍を編成し敵と対峙して宿営するまでで、先に有利な地を占め勝ちを争う≒軍争ほど難しいことはない。
-    軍曹の難しさは、(策略によって)敵軍には自軍を遠くにいるように見せかけ油断させて利とするところにある。敵より遅く出て先に到着するのを遠近の計(迂直の計)を知る者である。
+    軍争の難しさは、(策略によって)敵軍には自軍を遠くにいるように見せかけ油断させて利とするところにある。敵より遅く出て先に到着するのを遠近の計(迂直の計)を知る者である。
 - date: 2024-12-15
   bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
   pages: 278 ~ 284
