--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -295,3 +295,15 @@
     湿地ではなるべく戦わず、やむを得ぬ場合は木々を背にして戦う。平地では高い地形を右後ろにし、より低い地形にいる敵と戦う。
     この 4 つの地の利は、黄帝が四方の諸侯に勝った所以である。
     より有利な高い日向の地形に陣取るには、先に出た軍争が必要ということか。
+- date: 2024-12-23
+  bookTitle: 魏武注孫子
+  pages: 154  ~ 159
+  notes: |
+    行軍篇 第九。
+    「軍を置く場所」軍は高い場所と陽を好み、丘陵や堤防ではその南側で右に背にするのが地の利とす。
+    「危険な地形」絶澗(深い渓谷)・天井(水が溜まる地形)・天牢(深い山道)・天羅(網で人を閉ざせる地形)・
+    天陥(陥没した窪地)・天隙(谷間の狭い道)という六害の地形から自軍は遠ざかり、敵の背にさせる。
+    「伏兵のいる場所」群のそばに険阻(高低入り乱れた地)・潢井(池)・蒹葭(草の多い地)・林木(木の多い地)・
+    蘙薈(覆い隠せる地)がある場合は伏兵がいると考え慎重に探索せねばならない。
+    近くにいて動かない敵はその布陣が険阻であることに頼っており、敵の誘いに乗らない。
+    ここまでが地形に関する話で、以降は敵情を図る。
