--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -307,3 +307,14 @@
     蘙薈(覆い隠せる地)がある場合は伏兵がいると考え慎重に探索せねばならない。
     近くにいて動かない敵はその布陣が険阻であることに頼っており、敵の誘いに乗らない。
     ここまでが地形に関する話で、以降は敵情を図る。
+- date: 2024-12-24
+  bookTitle: 魏武注孫子
+  pages: 160  ~ 166
+  notes: |
+    軍争篇 第七。
+    「自然の情報」自然の変化から敵の動きを知る。木が揺れ動くのは敵が伐採し切り開いたため。
+    草を結んで障害とされているのは自軍を疑わすため。鳥獣の動きから敵の伏兵や包囲を知り、砂塵から敵陣の動きを知る。
+    「敵の状態」敵と接触があれば欺き合いであると捉える。敵の使者が謙っていれば進軍・強気であれば退却を疑う。
+    敵の軽車が先に出れば陣を布いており、人質のない和平は謀略である。走り回っている敵は進軍の機会を伺い、半分進んで半分退けば誘っている。
+    「敵の情報」(間諜により)敵情を知ることで、飢え乾き、疲弊、軍規の乱れ、兵の離心、といった状況や、敵の戦いの行き詰まりや困惑、
+    敵軍が休息を狙っていたり奇兵・伏兵をを企てようとしている出方等を把握できる。
