--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -311,7 +311,7 @@
   bookTitle: 魏武注孫子
   pages: 160  ~ 166
   notes: |
-    軍争篇 第七。
+    行軍篇 第九。
     「自然の情報」自然の変化から敵の動きを知る。木が揺れ動くのは敵が伐採し切り開いたため。
     草を結んで障害とされているのは自軍を疑わすため。鳥獣の動きから敵の伏兵や包囲を知り、砂塵から敵陣の動きを知る。
     「敵の状態」敵と接触があれば欺き合いであると捉える。敵の使者が謙っていれば進軍・強気であれば退却を疑う。
