--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -318,3 +318,15 @@
     敵の軽車が先に出れば陣を布いており、人質のない和平は謀略である。走り回っている敵は進軍の機会を伺い、半分進んで半分退けば誘っている。
     「敵の情報」(間諜により)敵情を知ることで、飢え乾き、疲弊、軍規の乱れ、兵の離心、といった状況や、敵の戦いの行き詰まりや困惑、
     敵軍が休息を狙っていたり奇兵・伏兵をを企てようとしている出方等を把握できる。
+- date: 2024-12-25
+  bookTitle: 魏武注孫子
+  pages: 166  ~ 171
+  notes: |
+    行軍篇 第九。
+    「謀略」兵力は多ければ良いものではない。謀略により敵情を理解すれば後方支援部隊でも敵を破れる。
+    深謀遠慮もなく敵を侮れば必ず敵に捕らえられる。
+    「文と武」兵が将に親しんでおらずに罰を与えれば兵は服従しない。兵が将に親しんでいて罰を与えなければ驕り怠惰となり用いることができない。
+    そのため兵を命令するには文(仁恩)を以てし、統率するには武(軍法)を以てする。
+    平素より民草に命令を行われていれば服従する。これは将と民草が信頼し合っているからである。
+    曹操は文を仁、武を法と解釈し、唐の李筌は仁恩、軍法と解釈した。
+    事例として、諸葛亮が張郃を破った話。
