--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -330,3 +330,14 @@
     平素より民草に命令を行われていれば服従する。これは将と民草が信頼し合っているからである。
     曹操は文を仁、武を法と解釈し、唐の李筌は仁恩、軍法と解釈した。
     事例として、諸葛亮が張郃を破った話。
+- date: 2024-12-26
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 285 ~ 297
+  notes: |
+    第 11 章 有限状態機械プロパティ
+    PropEr では取りうる状態が 1 つでそれがイベントにより遷移していく有限状態機械のモデル化に特化したプロパティがある。
+    ステートフルプロパティと似ているが、状態の組み合わせが爆発する(前提条件で大幅にパターンを絞らないければならない)ような場合、
+    各状態に名前をつけることができ利用者がそれを判別できるようなケースに向いている。
+    例題として `circuit_breaker` というライブラリを対象にした例が挙げられている。
+    この場合の取りうる状態は、 ok(遮断されておらずシステムが有効な状態), tripped(障害が多発しシステムが遮断された状態),
+    blocked(利用者が操作を止めるために意図的にサーキットブレーカーを落とした状態) があって正に状態機械向きである。
