--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -341,3 +341,12 @@
     例題として `circuit_breaker` というライブラリを対象にした例が挙げられている。
     この場合の取りうる状態は、 ok(遮断されておらずシステムが有効な状態), tripped(障害が多発しシステムが遮断された状態),
     blocked(利用者が操作を止めるために意図的にサーキットブレーカーを落とした状態) があって正に状態機械向きである。
+- date: 2024-12-27
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 297 ~ 314
+  notes: |
+    第 11 章 有限状態機械プロパティ
+    サーキットブレーカーのモデルを書いて FSM(有限状態機械) プロパティを書いていく。
+    テスト対象の挙動を理解してないとかけないとか、テスト結果の統計情報からテストが期待した分布になるよう重み付けを調整したりとか、これまでの章で学んだことを活かしている。
+    PropEr では～という話なので FsCheck でどうしよう...というところではあるが、この辺りの感覚は共通して参考にできる。
+    付録は飛ばした。これでこの本は終わり。あとは本でシミュレートしたのを実践してかないと。
