--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -33,3 +33,6 @@
 - id: wei-wu-zhu-sun-tzu
   bookTitle: 魏武注孫子
   bookAuthor: 曹操, 渡邉義浩
+- id: peering-chronicle-in-japan
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  bookAuthor: 小川晃通
