--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -350,3 +350,12 @@
     テスト対象の挙動を理解してないとかけないとか、テスト結果の統計情報からテストが期待した分布になるよう重み付けを調整したりとか、これまでの章で学んだことを活かしている。
     PropEr では～という話なので FsCheck でどうしよう...というところではあるが、この辺りの感覚は共通して参考にできる。
     付録は飛ばした。これでこの本は終わり。あとは本でシミュレートしたのを実践してかないと。
+- date: 2024-12-28
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  pages: 129 ~ 142
+  notes: |
+    はじめに と あとがき を読んだ。
+    インターネットを作り出す人の営み、特に組織同士をつなげるピアリングという日本のインターネットを構築する形態について、
+    2011 ~ 2021 年の発展・変遷をまとめてるぽい。
+    わたしはピアリングも知らなければ BGP も知らないので興味深く読ませていただく。
+    目次に「堂島問題」と出てきたところでデータセンターのらへんのやつかと笑ってしまった。
