--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -352,7 +352,7 @@
     付録は飛ばした。これでこの本は終わり。あとは本でシミュレートしたのを実践してかないと。
 - date: 2024-12-28
   bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
-  pages: 129 ~ 142
+  pages: i ~ viii, 129 ~ 142
   notes: |
     はじめに と あとがき を読んだ。
     インターネットを作り出す人の営み、特に組織同士をつなげるピアリングという日本のインターネットを構築する形態について、
