--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -363,6 +363,7 @@
   bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
   pages: 1 ~ 7
   notes: |
+    第 1 章 ピアリングを巡る静かな戦い。
     ピアリングは BGP の形態の一種で組織のネットワークとネットワークを繋ぐので、 ISP 同士のビジネスの力学が働いたりする。
     Internet は internetworking のことで、ネットワーク同士を繋ぐことで成り立っている。
     これは雑に言うと router が routing table に基づき next hop に packet を送信することの集合で成り立つ。
