--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -385,3 +385,18 @@
     peering をする動機は、大手が自身のトラフィックを獲得して transit のサービスを成立させたり、 transit のトラフィックを減らしコストダウンを図ったり、通信品質の担保、スケールアウトのため等がある。
     peering を解消するのを depeering といい、相互の AS にメリットがなくなったり政治的な事情で行われることがある。
     めちゃくちゃビジネスライクなんやなというのを第 1 章で理解した。
+- date: 2024-12-31
+  bookTitle: 魏武注孫子
+  pages: 172  ~ 177
+  notes: |
+    地形篇 第十。
+    6 つの地形、 通・掛・支・隘・険・遠とそれぞれに応じた戦い方について。敵が十分に攻撃できるくらい弱くても地形によっては勝率は半分だととく。
+    また 6 つの敗因、走る・弛む・陥る・崩れる・乱れる・北げるは将によるものとする。
+    地形は軍の助けであるので、うまく利用すれば必ず勝つとす。
+    また将の話にも触れ、将は必ずしも君子に従うべきでない(状況に臨機応変であるべき)、
+    兵を大切にすることで従わせる(ただしそれだけでは統率できない)と、以前の話を繰り返す。
+    「六種の地形」四方に通ずる通では先んじて高い南向きの地の得て両道を確保し敵を討つ。険阻で互いの勢力圏が交錯する掛では的に備えがなければ討てる。
+    自軍も敵も出る利がない支では敵を半分ほどおびき寄せて討てば利がある。
+    山間の谷間である隘では先に自分を満たせれば、山川や丘陵である険では先に南向きの高い地を得れば、待って敵を打つ、そうでなければ敵を追わない。
+    互いに遠い遠では勢が等しければ戦う利がない。
+    地の利を得られなければ戦わない徹底さからも地の利を得るための軍争の重要さがわかる。
