--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -27,3 +27,12 @@
     public peering の場合複数の AS のトラフィックが 1 本の回線に集中する可能性があるが、多数の AS と接続する手間やコスト面でのメリットがある。
     IX は国や政治的背景によって在り方に違いがある。合法的傍受(Lawful Intercept)の対応や、 MSK-IX(Moscow Internet eXchange) は Sovereign Internet という規制の元でインターネットからの切り離せる仕組みが強制されている。
     IX が設置される場所は国それぞれだが技術的・運用的・政策的課題はどこも共通しており、 IX 事業者連合会で情報交換されている。
+- date: 2025-01-03
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  pages: 46 ~ 47
+  notes: |
+    第 3 章 IX とは何か？国ごとに違う IX 。
+    日本の IX の最大手は JPIX(1997 年～ KDDI)、JPNAP(2001 年～ NTT)、BBIX(2003 年～ソフトバンク) がある。
+    株主に大手キャリアが含まれ、 transit と peering の両方を提供している点が、海外では珍しい形態で日本の IX は特徴である。
+    Equinix の IX も利用されており、学術系で WIDE プロジェクトが運営する NSPIXP 、地域 IX がある。
+    WIDE プロジェクトが 1994 年に神保町で NSPIXP を始めるまでは transit を海外から購入していた。
