--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -48,3 +48,14 @@
     開始当初は BGP3 での接続だったが、後に NSPIXP-2 を KDD 大手町ビルに設置。 BGP4 に移行。
     学術系 IX として実験的な取り組みをする側面もある。
     地理的に分散した IX(大阪、福島の IDC と港町の OMP)、 IPv6 のプレイグラウンド(NSPIXP-6)、 DNS の M-root サーバ(世界に 13 ある root サーバのうちの 1 つ)等。
+- date: 2025-01-05
+  bookTitle: 魏武注孫子
+  pages: 177  ~ 179
+  notes: |
+    地形篇 第十。
+    「六種の敗因」軍の六種の敗因がある。いずれも将の能力不足による。
+    敵の戦力を測らず敵わなくて「走る」(逃走)・軍吏が弱く兵卒を統率できず統制が取れず「弛む」・
+    軍吏が強くとも兵卒が弱く進撃について来れず危険に「陥る」・
+    小将が大将に怒られ心服せず独断で戦い大将は小将の怒りに任せ敵を測れず軍勢が「崩れる」・
+    将が弱く軍吏と兵卒の状態がなく布陣が不統一で軍規が「乱れる」・
+    将が敵を測れず弱兵で強兵を攻め敗北する「北げる」。
