--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -59,3 +59,16 @@
     小将が大将に怒られ心服せず独断で戦い大将は小将の怒りに任せ敵を測れず軍勢が「崩れる」・
     将が弱く軍吏と兵卒の状態がなく布陣が不統一で軍規が「乱れる」・
     将が敵を測れず弱兵で強兵を攻め敗北する「北げる」。
+- date: 2025-01-06
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  pages: 59 ~ 71
+  notes: |
+    第 3 章 IX とは何か？国ごとに違う IX 。
+    日本初の商用 IX JPIX の立ち上げ(1997年)。NSPIXP は学術向けの側面強く、1995 年頃はまだ米国経由の通信が多かった。
+    当時、KDD は海底ケーブルを所有し、MCI, Level 3, Sprint から transit を購入。米国では IX 黎明期の終焉で Tier 1 同士のみ peering が可能、他は transit 購入が一般的に。
+    日本では KDD と IRI を中心に大手 ISP から出資を募り、より接続しやすく 24 時間 365 日稼働する IX を目指して設立。ただし NTT と IIJ は出資・接続せず、後に JPNAP を立ち上げる。
+    中小 ISP を中心に接続を増加。SINET (大学間ネットワーク) も接続。初期は KDD 大手町ビルに設置、後に都内・名古屋・大阪へ分散。
+    2000年 頃からコンテンツプロバイダも接続し、国内トラフィックが増加。海外からは Chunghwa Telecom, Singtel なども参加。
+    JPIX 以前に香港テレコム・ Dacom(LG の前身)・ Singtel ・ Telstra ・ KDD の 5 社にチャイナテレコムを加えてピアリングするグループがあった。
+    海の真ん中までケーブルを持ち寄って接続する形態だったが 2000 年代には米国の IX 黎明期の終焉のような強者の理論でチャイナテレコムが離脱しなくなった。
+    フェアな互助関係じゃないと難しいがビジネス観点での思惑が渦巻いてたんやな。
