--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -72,3 +72,14 @@
     JPIX 以前に香港テレコム・ Dacom(LG の前身)・ Singtel ・ Telstra ・ KDD の 5 社にチャイナテレコムを加えてピアリングするグループがあった。
     海の真ん中までケーブルを持ち寄って接続する形態だったが 2000 年代には米国の IX 黎明期の終焉のような強者の理論でチャイナテレコムが離脱しなくなった。
     フェアな互助関係じゃないと難しいがビジネス観点での思惑が渦巻いてたんやな。
+- date: 2025-01-07
+  bookTitle: 魏武注孫子
+  pages: 180  ~ 185
+  notes: |
+    地形篇 第十。
+    「地形は軍の助け」地形の話に戻る。地形は軍の助けになるのでよく知る者は必ず勝てる。この原則を知り事前に勝てるかを知れば必ずしも君主に従う必要はない。
+    名声を求めてむや医に進軍せず撤退を恥じず、ただ民と君主のためになる将は国の宝である。
+    「将と民草」将は兵卒を大切にし愛してこそ共に死地に臨める。ただ愛するだけでなく統率をとれねばならない。
+    曹操は、恩は威と、賞は罰と共に用いねばならないとする。事例として「泣いて馬謖を斬る」。
+    「勝利の可能性」自軍と敵軍の状況が攻撃すべき状況を知るだけで地形を知らなければ勝率は半分である。
+    そのため、敵を知り己を知れば、勝利はようやくあやうくなくなる。天を知り地を知れば、勝利はようやく十全となる。
