--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -83,3 +83,15 @@
     曹操は、恩は威と、賞は罰と共に用いねばならないとする。事例として「泣いて馬謖を斬る」。
     「勝利の可能性」自軍と敵軍の状況が攻撃すべき状況を知るだけで地形を知らなければ勝率は半分である。
     そのため、敵を知り己を知れば、勝利はようやくあやうくなくなる。天を知り地を知れば、勝利はようやく十全となる。
+- date: 2025-01-08
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  pages: 71 ~ 77
+  notes: |
+    第 3 章 IX とは何か？国ごとに違う IX 。
+    NTT と IIJ が設立に関わった JPNAP の立ち上げ(1997 年)。
+    分割前の NTT の研究所と IIJ での共同実験がはじまりで、 IX でなくコンテンツを流すネットワークがビジネスだった。
+    IIJ が transit を売ってい他関係で IX をやりたかった NTT が表向き出来なかった。
+    しかし JPIX に ISP が集まるのに危機感を持った。また NTT 分割によって NTT コミュニーションズができ国際通信を売り始めた(1999)
+    KDD に国際通信を独占される恐れがあり ISP を集める方法として IX を始めた。
+    始めの顧客は IX 開始前のコンテンツの顧客。商用 IX としては最初に大阪に設置。当時の大阪はバックアップ用途が多かった。
+    余談として日本と海外の IX の可用性の違いだとか、現在東京大阪で二極化を緩和するための地方 IX での相互接続とか。
