--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -95,3 +95,12 @@
     KDD に国際通信を独占される恐れがあり ISP を集める方法として IX を始めた。
     始めの顧客は IX 開始前のコンテンツの顧客。商用 IX としては最初に大阪に設置。当時の大阪はバックアップ用途が多かった。
     余談として日本と海外の IX の可用性の違いだとか、現在東京大阪で二極化を緩和するための地方 IX での相互接続とか。
+- date: 2025-01-09
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  pages: 78 ~ 83
+  notes: |
+    第 3 章 IX とは何か？国ごとに違う IX 。
+    ソフトバンク系 IX の BBIX の立ち上げ。 JPIX から depeering 後長く低迷。低価格路線を始める
+    国際ローミングの IX のようなサービス Roaming Peering eXchange を始めた。
+    RPX ユーザには IX をバンドル提供。後発 IX ながら、すべての接続帯域を合計するとアジア最大の IX になった。
+    国内に閉じないことで市場が広がったような感じかな。といっても狙ってできるもんでもなかろうが。
