--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -104,3 +104,13 @@
     国際ローミングの IX のようなサービス Roaming Peering eXchange を始めた。
     RPX ユーザには IX をバンドル提供。後発 IX ながら、すべての接続帯域を合計するとアジア最大の IX になった。
     国内に閉じないことで市場が広がったような感じかな。といっても狙ってできるもんでもなかろうが。
+- date: 2025-01-09
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  pages: 84 ~ 92
+  notes: |
+    第 3 章 IX とは何か？国ごとに違う IX 。
+    2012 年頃の peering 状況とコミュニティ活動による IX の変化。
+    当時は海外から日本につなぎにくかった。海外よりも 10 倍くらい価格が高く、いわゆる JTC らしい重厚なコミュニケーションが必要だった。
+    海外のようにデータセンター事業者が IX をやってそこに集中して価格が抑えられるとか、 DIY 的な活動や NPO が非営利でやるとかが日本でやりにくかったというのは興味深いな。
+    文化的なアレのせいか？或いは先に商用で大手が市場を取ってしまってたり、通信事業者として登録しないと IX をやれないあたりが、日本のコミュニティが活動しにくい環境を作ったか。
+    しかし結果的にJANOG から課題感が出て、 peering-jp や CloudIX 研究会のような事業者同士のコミュニティがつながって改善されていっていると。
