--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -132,3 +132,11 @@
     元は欧米のコミュニティの延長だったので日本からホストとして参加するには中々 OK が出なかった。
     Peering Asia というアジア圏のイベントもある。いずれも NOG のような技術的なばというよりはビジネス的な交流の場。
     実際にネットワークを繋ぐとなると得体のしれない相手よりも知った中の方がというのはなんかわかるかも。
+- date: 2025-01-13
+  bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
+  pages: 109 ~ 116
+  notes: |
+    第 5 章 コンテンツ事業者の台頭。
+    2010 年ごろまでに通信キャリアや Tier1 から Hyper Giants と呼ばれるコンテンツ事業者や CDN に移り変わった。特に動画コンテンツによるトラフィックの増加が大きい。
+    Hyper Giants は多くの AS に private peering し、これにより従来の Tier で階層的だったネットワーク構造が変化した。
+    peering だけでなく、コンテンツ事業者のキャッシュサーバを AS 内に置くビジネスの駆け引きも行われるようになった。
