--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -36,3 +36,6 @@
 - id: peering-chronicle-in-japan
   bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
   bookAuthor: 小川晃通
+- id: what-a-programmer-should-know-about-the-cpu
+  bookTitle: プログラマーのための CPU 入門 CPU は以下にしてソフトウェアを高速に実行するか
+  bookAuthor: Takenobu Tani
