--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -149,3 +149,12 @@
     ケータイの時代からスマフォの時代になりインターネットの繋ぎ方を考えないといけなくなった、
     社内の事情で depeering した話、ピアリングの時代になりトランジットを販売している ISP の葛藤みたいな話とか。これでこの本は終わり。
     話は逸れるが、ちょうど PowerShell Galley の Azure CDN from Edgio からの移行でがここ数日障害ガチャになってたけど、その破産して 2024 NASDAQ 上場廃止した Edgio の前の社名が Limelight Networks だったりする。ここ最近は CDN も大変なんやろか。
+- date: 2025-01-15
+  bookTitle: プログラマーのための CPU 入門 CPU は以下にしてソフトウェアを高速に実行するか
+  pages: i ~ xii, 246 ~ 256
+  notes: |
+    序文と目次と付録 B。
+    如何に CPU がソフトウェアを実行するのか、ミクロな振る舞いから肌感を養いソフトウェアの高速化につなげるという本。
+    CPU 命令に馴染みのない人は付録 B を読めとのことなので先に読んでおいた。 CISC, RISC の設計思想の違いが見えたり。
+    ミクロな振る舞いに着目するから表紙も小人なんか、より糸は thread やったりして。
+    これまで CPU-bound, Memory-bound, I/O-bound とかの言葉は使ってきたが、そこの解像度が上がるとよいな。
