--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -37,5 +37,5 @@
   bookTitle: ピアリング戦記 日本のインターネットを繋ぐ技術者たち
   bookAuthor: 小川晃通
 - id: what-a-programmer-should-know-about-the-cpu
-  bookTitle: プログラマーのための CPU 入門 CPU は以下にしてソフトウェアを高速に実行するか
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
   bookAuthor: Takenobu Tani
