--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -158,3 +158,13 @@
     CPU 命令に馴染みのない人は付録 B を読めとのことなので先に読んでおいた。 CISC, RISC の設計思想の違いが見えたり。
     ミクロな振る舞いに着目するから表紙も小人なんか、より糸は thread やったりして。
     これまで CPU-bound, Memory-bound, I/O-bound とかの言葉は使ってきたが、そこの解像度が上がるとよいな。
+- date: 2025-01-16
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 1 ~ 2
+  notes: |
+    第 1 賞 CPU は如何にしてソフトウェアを高速に実行するか。
+    この本はヘネパタの定義に沿った CPU 時間が短いほど「CPU の性能」が良いとする。
+    `CPU 時間 = ①実行命令数/プログラム × ②クロックサイクル数/実行命令数 × ③秒数/クロックサイクル数`
+    ① はプログラムやコンパイラや命令セット、 ② は CPU ハードウェア内部構造、 ③ は半導体プロセスや回路 で決まる。
+    この本は近年は外から見えにくい ② microarchitecture に焦点を当てて、ソフトウェア高速化にどのような効果をもたらすかを知るのが目的。
+    初っ端からヘネパタ。読後のチャレンジ課題か。
