--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -168,3 +168,13 @@
     ① はプログラムやコンパイラや命令セット、 ② は CPU ハードウェア内部構造、 ③ は半導体プロセスや回路 で決まる。
     この本は近年は外から見えにくい ② microarchitecture に焦点を当てて、ソフトウェア高速化にどのような効果をもたらすかを知るのが目的。
     初っ端からヘネパタ。読後のチャレンジ課題か。
+- date: 2025-01-17
+  bookTitle: 魏武注孫子
+  pages: 186 ~ 187
+  notes: |
+    九地篇 第十一。
+    自軍の状況を、散地・軽地・争地・交地・衢地・重地・圮地・囲地・死地の九地があり状況に合わせた戦い方が必要である。
+    自軍の兵を死地に置き死線させ実力以上に戦わせるのが重要であり、そのために重地に進軍する。
+    それを為すためには常山の蛇・率然のような連携が必要であり、軍政と九地の理法が重要であるとする。はじめは正、あとで変について。
+    締めくくりは毎度おなじみ「兵は詭道」の表現を変えた形。
+    戦わないのを善しとしているし前の篇でも徳について述べてると思うが、この篇は覇道なイメージが強い。
