--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -178,3 +178,12 @@
     それを為すためには常山の蛇・率然のような連携が必要であり、軍政と九地の理法が重要であるとする。はじめは正、あとで変について。
     締めくくりは毎度おなじみ「兵は詭道」の表現を変えた形。
     戦わないのを善しとしているし前の篇でも徳について述べてると思うが、この篇は覇道なイメージが強い。
+- date: 2025-01-18
+  bookTitle: 魏武注孫子
+  pages: 188 ~ 193
+  notes: |
+    九地篇 第十一。
+    「九地とは」散地・軽地・争地・交地・衢地・重地・圮地・囲地・死地の説明。
+    「九地での戦い方」各状況での戦い方を述べる。争地では軍争の、重地では始計篇や作戦篇で述べたような兵糧の略奪をする重要性を説いているようだ。
+    地形を絡めた自軍の状況に触れているが、圮地・囲地で触れる地形は行軍篇や地形篇で述べたような危険な地形と言葉が違うのがややこしい。
+    険阻であるとかは共通するが。
