--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -187,3 +187,11 @@
     「九地での戦い方」各状況での戦い方を述べる。争地では軍争の、重地では始計篇や作戦篇で述べたような兵糧の略奪をする重要性を説いているようだ。
     地形を絡めた自軍の状況に触れているが、圮地・囲地で触れる地形は行軍篇や地形篇で述べたような危険な地形と言葉が違うのがややこしい。
     険阻であるとかは共通するが。
+- date: 2025-01-19
+  bookTitle: 魏武注孫子
+  pages: 194 ~ 198
+  notes: |
+    九地篇 第十一。
+    「軍の統制」敵軍の連携を分断するためには迅速に戦い、敵軍の準備が間に合わないのに乗じて予測しない方法で備えのないところを攻める。
+    この節は九地と関係がなく見える。敢えて関連付けるなら死地に於いて迅速に戦うための軍政を乱すというところか。
+    実例として第一次北伐。ただし馬謖が功を焦った敗北によりで作戦は失敗した。
