--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -195,3 +195,11 @@
     「軍の統制」敵軍の連携を分断するためには迅速に戦い、敵軍の準備が間に合わないのに乗じて予測しない方法で備えのないところを攻める。
     この節は九地と関係がなく見える。敢えて関連付けるなら死地に於いて迅速に戦うための軍政を乱すというところか。
     実例として第一次北伐。ただし馬謖が功を焦った敗北によりで作戦は失敗した。
+- date: 2025-01-20
+  bookTitle: 魏武注孫子
+  pages: 194 ~ 198
+  notes: |
+    九地篇 第十一。
+    「死地で勝つ」自軍を重地へ進めそこを死地とすれば、将兵一体となって戦に集中し実力以上に戦うことができる。曹操はこれを死戦という。
+    また呪いを禁じ疑惑の念を絶つのは、孫氏が合理性を重視していることを示している。
+    自軍の退路を断つのは冷酷なようだが、迷いなく戦に集中するためには必要なことなんやろうな。
