--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -203,3 +203,11 @@
     「死地で勝つ」自軍を重地へ進めそこを死地とすれば、将兵一体となって戦に集中し実力以上に戦うことができる。曹操はこれを死戦という。
     また呪いを禁じ疑惑の念を絶つのは、孫氏が合理性を重視していることを示している。
     自軍の退路を断つのは冷酷なようだが、迷いなく戦に集中するためには必要なことなんやろうな。
+- date: 2025-01-21
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 3 ~ 9
+  notes: |
+    第 1 章 CPU は如何にしてソフトウェアを高速に実行するか。
+    現代主流の CPU から見て、ソフトウェアは「小さい命令の流れ」でありその流れが速いほど速く実行できる。
+    現代の命令セットアーキテクチャと CPU の内部構造(マイクロアーキテクチャ)は分離されてる。
+    かつては Lisp マシンや Prolog マシンのような CPU もあったが「小さい命令の流れ」を処理する方が汎用性・高速化・小型化に向いていて廃れた。
