--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -162,7 +162,7 @@
   bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
   pages: 1 ~ 2
   notes: |
-    第 1 賞 CPU は如何にしてソフトウェアを高速に実行するか。
+    第 1 章 CPU は如何にしてソフトウェアを高速に実行するか。
     この本はヘネパタの定義に沿った CPU 時間が短いほど「CPU の性能」が良いとする。
     `CPU 時間 = ①実行命令数/プログラム × ②クロックサイクル数/実行命令数 × ③秒数/クロックサイクル数`
     ① はプログラムやコンパイラや命令セット、 ② は CPU ハードウェア内部構造、 ③ は半導体プロセスや回路 で決まる。
@@ -201,7 +201,7 @@
   notes: |
     九地篇 第十一。
     「死地で勝つ」自軍を重地へ進めそこを死地とすれば、将兵一体となって戦に集中し実力以上に戦うことができる。曹操はこれを死戦という。
-    また呪いを禁じ疑惑の念を絶つのは、孫氏が合理性を重視していることを示している。
+    また呪いを禁じ疑惑の念を絶つのは、孫子が合理性を重視していることを示している。
     自軍の退路を断つのは冷酷なようだが、迷いなく戦に集中するためには必要なことなんやろうな。
 - date: 2025-01-21
   bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
