--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -216,8 +216,19 @@
   pages: 10 ~ 17
   notes: |
     第 2 章 命令の密度を上げるさまざまな工夫。
-    現代の CPU は命令流を逐次的に処理する。ハードウェア的には命令流の命令を 3 つのステージに分けて扱う。
+    現代の CPU は命令流を逐次的に処理する。ハードウェア的には命令流の命令を 3 つのステージに分けて扱う(簡単のため。実際のステージは CPU 毎に異なる)。
     命令フェッチ(PC レジスタに従い命令メモリからフェッチ)・命令でコード(フェッチした命令のバイト列をデコード)・命令実行(デコードした命令に従いデータメモリとレジスタ間の読み書きや演算器でレジスタの値を加工、演算で使うデータや値 = オペランド(operand)の読み込み)。
     逐次処理方式は単純に命令 1 つの実行が終わってから次の命令を実行するため、 2 ステージ分のサイクルが無駄になる。
     ここでいうサイクルは CPU のクロックサイクルで、命令実行に要するサイクルをレイテンシと呼ぶ。
     なんかうっすら記憶にあると思ったけど情報処理技術者試験で覚えたやつか。
+- date: 2025-01-23
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 17 ~ 22
+  notes: |
+    第 2 章 命令の密度を上げるさまざまな工夫。
+    逐次処理方式は安全な実装。比べてパイプライン処理(pipelining)は投機的で、ステージが完了したら次の命令を実行するため、 2 サイクル分速くなる。
+    代わりに命令のキャンセル処理が煩雑になる。キャンセル処理は CPU のバグの温床。
+    スーパースカラ(superscalar)方式は、パイプラインを増やして同時に処理する命令を増やす。
+    スーパーパイプライン(superpipelining)方式は、命令を扱うステージを細かく分けて処理を高速化する(具体的に何段からという定義はない)。
+    いずれもある種力技で、 CPU 設計の複雑さが増し性能上の制約も出てくるらしい。
+    いずれの高速化も速さの代わりに失うものがあると。
