--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -232,3 +232,14 @@
     スーパーパイプライン(superpipelining)方式は、命令を扱うステージを細かく分けて処理を高速化する(具体的に何段からという定義はない)。
     いずれもある種力技で、 CPU 設計の複雑さが増し性能上の制約も出てくるらしい。
     いずれの高速化も速さの代わりに失うものがあると。
+- date: 2025-01-24
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 23 ~ 26
+  notes: |
+    第 2 章 命令の密度を上げるさまざまな工夫。
+    スーパースカラは空間方向に流量を、スーパーパイプラインは時間方向に流速を高める。
+    同時に利用でき CPU の命令の密度を高められるが、投機的な実行には設計の複雑さなどのリスクが伴う。
+    また同時に処理できる命令は増えるが 1 命令の処理時間は変わらなのが現代の CPU の高速化。
+    命令の高密度化を更に高めたのがベクトル型スパコンや GPU 。
+    ここまで命令流が滞らない大前提であり、実際には流れを阻害する要因や回避策がある。
+    命令自体は速くならないというのはちゃんと理解してなかったかも。 CPU クロックの頭打ちの話か。
