--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -243,3 +243,17 @@
     命令の高密度化を更に高めたのがベクトル型スパコンや GPU 。
     ここまで命令流が滞らない大前提であり、実際には流れを阻害する要因や回避策がある。
     命令自体は速くならないというのはちゃんと理解してなかったかも。 CPU クロックの頭打ちの話か。
+- date: 2025-01-25
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 27 ~ 35
+  notes: |
+    第 3 章 データ依存関係。
+    真のデータ依存関係(後続の命令の読み込みレジスタが先発する命令の書き込みレジスタに依存)、
+    逆依存関係(後続の命令の書き込みレジスタが先発する命令の読み込みレジスタに依存)、出力依存関係(先発・後続の命令の書き込みレジスタが同じ)、
+    入力依存関係(先発・後続の命令の読み込みレジスタが同じ)等あるデータ依存関係の中で命令流を滞らせるのが、真のデータ依存関係。
+    スーパースカラでもスーパーパイプラインでも後続の命令が待たされる。これをペナルティサイクル(penalty cycle)といい、流れを妨げる要因をハザード(hazard)という。
+    依存関係にない命令を入れ替えるアウトオブオーダー実行(out-of-order execution)で緩和できるが、結果の整合性を保つためには再順序化(reorder)が必要となる。
+    ただし命令数分の re-order buffer が必要となりそれ以上の実行はできない制約ため実装に関して大きな問題がある。
+    アウトオブオーダー実行では逆依存関係や出力依存関係も影響を受けるため、依存関係にあるレジスタを解消するためのレジスタリネーム(register renaming)が必要となる。
+    これも専用のレジスタが必要なため、数が足りなければ実行する命令数を制約することになる。
+    速度を求めた結果の制約が重いというのがわかってきた。
