--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -257,3 +257,13 @@
     アウトオブオーダー実行では逆依存関係や出力依存関係も影響を受けるため、依存関係にあるレジスタを解消するためのレジスタリネーム(register renaming)が必要となる。
     これも専用のレジスタが必要なため、数が足りなければ実行する命令数を制約することになる。
     速度を求めた結果の制約が重いというのがわかってきた。
+- date: 2025-01-26
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 35 ~ 38
+  notes: |
+    第 3 章 データ依存関係。
+    レイテンシが大きい命令を避けるソフトウェア実装の工夫に触れられる。
+    レイテンシが大きい命令自体の利用を避けるとか、レイテンシが大きい命令を先行させるソフトウェアパイプライニング最適化(software pipelining optimization)、
+    依存関係のない命令で空きを埋めるループアンローリング最適化(loop unrolling optimization)等。
+    ここで言うソフトウェアはアセンブリレベルの話で、コンパイラによる最適化が大きいのかな。
+    高次の言語での四則演算のような演算がそのまま命令に翻訳されるなら、なるべく除算と乗算のようなレイテンシの大きい命令を避けるという工夫はできるが。
