--- a/contents/booklogs/2025/2025-01.yml
+++ b/contents/booklogs/2025/2025-01.yml
@@ -267,3 +267,10 @@
     依存関係のない命令で空きを埋めるループアンローリング最適化(loop unrolling optimization)等。
     ここで言うソフトウェアはアセンブリレベルの話で、コンパイラによる最適化が大きいのかな。
     高次の言語での四則演算のような演算がそのまま命令に翻訳されるなら、なるべく除算と乗算のようなレイテンシの大きい命令を避けるという工夫はできるが。
+- date: 2025-01-27
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 38 ~ 44
+  notes: |
+    第 3 章 データ依存関係。
+    CPU の仕様書以外にレイテンシ、スーパースカラの同時実行、アウトオブオーダー実行の特性を知るために計測する方法。
+    CPU のミクロな挙動の計測が難しい点、 CPU の設計次第では特定の命令とレジスタの組み合わせのが速く・遅くなるようなものがある点を踏まえた上で、真のデータ依存関係を作ったアセンブリプログラムで `perf` コマンドを使って計測し、 `cycles` と `instructions` からレイテンシ等の特性を知る。
