Add a new post.

--- a/contents/booklogs/2025/2025-02.yml
+++ b/contents/booklogs/2025/2025-02.yml
@@ -9,3 +9,13 @@
     主記憶上のページテーブルから変換ルールを読み出すのをテーブルウォーク(table walk)と呼ぶ。
     このため本来のアクセスに加えテーブルウォークのため 2 回主記憶にアクセスが必要になり、無駄に長いサイクルがかかる。
     この本を読んでると、一難去ってまた一難という感じで次々に課題と緩和策の繰り返しから CPU のありがたみが沁みるよな。
+- date: 2025-02-02
+  bookTitle: プログラマーのための CPU 入門 CPU は如何にしてソフトウェアを高速に実行するか
+  pages: 91 ~ 94
+  notes: |
+    第 6 章 仮想記憶。
+    TLB(Translation Lookaside Buffer)はページテーブルの一部を高速に主記憶から読み込んでおくためのハードウェアで、テーブルウォークの遅さを緩和する。
+    ページテーブルと TLB は主記憶とキャッシュメモリの関係に近い。
+    TLB は主に 4KB のページ単位のため、空間局所性が高ければより発生しにくいが、ミスは発生しうる。これを TLB ミス(TLB miss)と呼ぶ。キャッシュミスよりその頻度は低いが、コストはより高い。 TLB ミスの要因やダメージもキャッシュと同様。
+    ただしフルアソシティブ(full associtive)の TLB はキャッシュは競合性ミスが発生しない。
+    TLB は流石に初めて聞いた気がする。ここでも緩和のための仕組みがさらなる複雑さを...
